Unreal Engine(Game Engine) added

--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,6 @@ bh_unicode_properties.cache
 # Sublime-github package stores a github token in this file
 # https://packagecontrol.io/packages/sublime-github
 GitHub.sublime-settings
+
+# JS Hint RC(For VS Code)
+.jshintrc
