--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "react-dom": "^16.6.0",
     "react-scripts": "2.0.5"
   },
+  "devDependencies": {
+    "@types/jest": "^24.0.18"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
